[package]
name = "https"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
# -- Common
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# -- Server
warp = { workspace = true }
# -- Client
reqwest = { workspace = true }